Fixed "stuck" background image.

--- a/sw-char-creator/src/index.css
+++ b/sw-char-creator/src/index.css
@@ -8,13 +8,27 @@
   src: url(./fonts/SF\ Distant\ Galaxy.ttf) format("truetype");
 }
 
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url("./images/background-image.png");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: cover;
+  width: 100vw;
+  margin: 0 auto;
+  /* Removing the "bounce effect" during scrolling.*/
+  height: 100vh;
+  overflow: auto;
 }
 
 code {
