--- a/sw-char-creator/src/styles/styles.css
+++ b/sw-char-creator/src/styles/styles.css
@@ -9,5 +9,5 @@
 .card-section {
   height: 100vh;
   width: 100vw;
-  background-color: cadetblue;
+  /* background-color: cadetblue; */
 }
